@@ -1,7 +1,7 @@
 AUX CorsixTH-unbundle-agg.patch 3357 RMD160 4062fb1aed56087960ce04c2f2ddaf778eb7887c SHA1 1e00ea90129c9f018c4fca859ccb0866b7336f7d SHA256 68fd6884cc5d3f65584e98c3663c20e8080dd553437cd6bc9a4d7a2e1432f387
 DIST CorsixTH-Beta4-Source.tar.gz 2319515 RMD160 1200acfeb1ff072a4ff990bfe9b9ae0a2a60e157 SHA1 df1bf294b0728d4dc839bae0c02056e547cfd7d4 SHA256 960f6d9b24c24477675fa1f231b4b7905c83b866524ae4a001a5a9dac463e453
 DIST CorsixTH-Beta5-Source.tar.gz 2398907 RMD160 48f0c2dfcd2fcb7469f1bf293bbc0ce92e33e15f SHA1 12c4793cca853db2f0b99722e67b57bbad163fb1 SHA256 26cd5e46a0ed3dbde1dbb9e8905c91fdbdb8b13579eeef301c34876c043a4018
-EBUILD CorsixTH-1.0_beta4-r1.ebuild 1231 RMD160 c9e9a56d20faabe89a80d490c12cbf191d526e68 SHA1 210412115308535d081655b1331a0703f6b25e0c SHA256 7f285d19545994022fe34b1e3aa69c852d17a2f565e6e2214c9ff4605a6694bc
-EBUILD CorsixTH-1.0_beta4.ebuild 1148 RMD160 13ad647a79e29da95f1f6a106768a0bddc3f6b6a SHA1 f0cdcf57b3fce06c729e9b03e101c88a1290e5ba SHA256 0c72dfa627b073d46a77f5997203a7c8412507d64048ec4170a1ec6e96191cd6
-EBUILD CorsixTH-1.0_beta5.ebuild 1257 RMD160 89d8c6bcc8adf1150e6b95f4f15c668b50f3eafb SHA1 b410da6746f1ecb7699e0a5ca2fd9100dc8b8269 SHA256 11a7c1306cac4c2942bc5b1353f7efb1552be429aafccb76536c6cdb1f32f5e4
-MISC ChangeLog 766 RMD160 54f6f82aacf45a52a2c33d8cf2f442f77055de13 SHA1 e24eee0c039fdb179f04a801edfc20a6e8453894 SHA256 2020d7ac54b30d9a7b7d8d493844887fd8d73850673ff8f66b15be1a622e5525
+EBUILD CorsixTH-1.0_beta4-r1.ebuild 1231 RMD160 c059f0f476d6ff80dd10b4da0618b4a7e1a917db SHA1 c0adf5f7d1d230ab89c3e5bc4629bfa8ebe232fa SHA256 fe4ad5ebe807d3ab916d6808cddec0cbd8b1128f35ddda72a86f935864168cf6
+EBUILD CorsixTH-1.0_beta4.ebuild 1148 RMD160 d81c2851546603ee6f237b3fa744a58ce09f749d SHA1 17c1fa896055b00a1095c4b5c15e2edff5f72df4 SHA256 6ddec81c976f80b55ebeb4f162c6fafc5ae04831f401245768d1ee986764de40
+EBUILD CorsixTH-1.0_beta5.ebuild 1257 RMD160 cc2b26e0d756027539c0fea856ac65287ae195d0 SHA1 67bc36880dc39e36e16a6313be78762bf11794e6 SHA256 b8dc30038422b1c7c6342fdec297df1be607397fde8d22a92cfc2103c5efa21b
+MISC ChangeLog 1095 RMD160 92777fc388d745105b112c2718a8855a89151b69 SHA1 10953a91584a57564783e63ea5ffb415c2d67cc5 SHA256 6cab27ec3bf246a08987e3fb644af595c748909f22e1cb016ec4fb6fbb0dc0f6
